[tool.poetry]
name = "z00ni"
version = "0.3.0-b.1+2022.02"
description = "Z00NI Discord Bot"
authors = ["Simplex <kontakt.simplex@outlook.de>"]
license = "AGPL-3.0 License"
repository = "https://github.com/Simplex-Developments/Z00NI"
homepage = "https://github.com/Simplex-Developments/Z00NI"


[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
nextcord = "^2.0.0-alpha.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
